fix: color picker hide on outside click and options scrollbar

--- a/src/components/color-picker/colorpicker.styles.scss
+++ b/src/components/color-picker/colorpicker.styles.scss
@@ -1,7 +1,7 @@
 .picker {
-	position: absolute;
-	left: 64px;
 	z-index: 1;
+	margin-left: -209px;
+	margin-top: 4px;
 }
 
 .swatch {
