--- a/src/components/options/options.styles.scss
+++ b/src/components/options/options.styles.scss
@@ -15,6 +15,7 @@
 	border-radius: 0.5rem;
 	height: 90vh;
 	margin: 1rem;
+	overflow: hidden;
 }
 
 .options:hover {
